--- a/manifest.json
+++ b/manifest.json
@@ -13,8 +13,16 @@
   },
   "browser_action": {
     "default_title": "HTTP Header Analyzer",
-    "default_icon": "icon.svg",
+    "default_icon": "icons/eye_32.png",
     "default_popup": "popup.html"
+  },
+  "icons": {
+    "16": "icons/eye_16.png",
+    "24": "icons/eye_24.png",
+    "24": "icons/eye_32.png",
+    "24": "icons/eye_64.png",
+    "24": "icons/eye_128.png",
+    "24": "icons/eye_256.png"
   },
   "permissions": [
     "http://*/*",
