--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 2,
 
-  "name": "http_header_analyzer",
+  "name": "HTTP Header Analyzer",
   "description": "Display the current (base page) http request and response headers on request",
-  "version": "0.1.0",
+  "version": "1.0.1",
 
   "background": {
      "persistent": true,
@@ -13,16 +13,16 @@
   },
   "browser_action": {
     "default_title": "HTTP Header Analyzer",
-    "default_icon": "icons/eye_128.png",
+    "default_icon": "icons/eye_32.png",
     "default_popup": "popup.html"
   },
   "icons": {
     "16": "icons/eye_16.png",
     "24": "icons/eye_24.png",
-    "24": "icons/eye_32.png",
-    "24": "icons/eye_64.png",
-    "24": "icons/eye_128.png",
-    "24": "icons/eye_256.png"
+    "32": "icons/eye_32.png",
+    "64": "icons/eye_64.png",
+    "128": "icons/eye_128.png",
+    "256": "icons/eye_256.png"
   },
   "permissions": [
     "http://*/*",
